fix the white space on the right

--- a/src/components/cards/CardList.css
+++ b/src/components/cards/CardList.css
@@ -3,4 +3,6 @@
     margin-right: 0px;
     padding-right: 0px;
     padding: 0px;
+    display: flex;
+    align-items: center;
 } 
